--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: red;
+    color: red;
 }
 
 #section{
